--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,32 @@
-title: guifang Liang
-# tagline: Here is personal website of guifang Liang. 
+
+title: Hanlin Cai
+# tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://liangguifang.com
+url: https://caihanlin.com
 
 # Owner/author information
 owner:
-  name: guifang Liang
-  avatar: liangguifang.jpg
-  email: 2284239018@qq.com
+  name: Hanlin Cai
+  avatar: hanlin.jpg
+  # bio: Two roads diverged in woods, I took the one less traveled by.
+  email: hanlin.cai@ieee.org
+  cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
+  # Social networking links are used in author-bio sidebar. Update and remove as you like.
+  twitter: lancecai2002
+  github: GuangLun2000
+  linkedin: hanlincai
+  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  bilibili: 594030035
+  researchgate: https://www.researchgate.net/profile/Hanlin-Cai
+  zhihu: https://www.zhihu.com/people/chlire
+  # facebook: caihanlin2002
+  # instagram: lancecai2002
+  # lastfm:
+  # tumblr:
+  # For Google Authorship https://plus.google.com/authorship
+  # google_plus:
+
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
 google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
@@ -21,8 +39,16 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 links:
   - title: About Me
     url: /
+  - title: Publications
+    url: /publications/
+  - title: Awards
+    url: /awards/
   - title: Hobbies
     url: /hobbies/
+  # - title: Startups
+    # url: /startups/
+  - title: Blogs
+    url: /blogs/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
