--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: guifang Liang
 # tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://liangguifang.com
+url: https://liangguifang.github.io
 
 # Owner/author information
 owner:
