--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: https://liangguifang.github.io
 # Owner/author information
 owner:
   name: Guifang Liang
-  avatar: hanlin.jpg
+  avatar: liangguifang.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   #email: hanlin.cai@ieee.org
   #cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
